small changes to fix mobile experience, disabling show ingredients on mobile for now

--- a/src/components/RecipeRandomCard/RecipeRandomCard.module.scss
+++ b/src/components/RecipeRandomCard/RecipeRandomCard.module.scss
@@ -65,3 +65,12 @@
         text-align: right;
     }
 }
+
+// For now until can fix ingredients
+.viewIngredientContainer {
+    display: block;
+
+    @media #{ $mq-smallScreen } {
+        display: none;
+    }
+}
